POST - Calender with month, weekdays n days

--- a/application/styles/index.css
+++ b/application/styles/index.css
@@ -1,4 +1,4 @@
-/* MAIN CONTENT  */
+/* MAIN BACKGROUND CONTENT  */
 .content {
   margin: auto 14.2rem;
 }
@@ -53,4 +53,105 @@ header > nav > a:hover {
 
 header > nav > a.active:hover {
   background-color: var(--white-letter);
+}
+
+/* MAIN */
+main {
+  margin-left: 2.4rem;
+  margin-top: 4rem;
+  margin: 4rem 0 2.4rem 2.4rem;
+}
+main > h1 {
+  font: 700 3.4rem var(--body-font);
+  color: var(--white-letter);
+}
+
+/* CALENDAR */
+.container-calendar {
+  width: 75.4rem;
+  height: 42.8rem;
+
+  margin-top: 4rem;
+  font: 400 1.6rem var(--body-font);
+  background-color: var(--black);
+
+  border-radius: 8px;
+  box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.calendar {
+  height: 31.6rem;
+  width: 64.8rem;
+
+  color: var(--white-letter);
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  color: var(--white-letter);
+}
+
+.month {
+  width: 100%;
+
+  margin-top: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  font-size: 2.2rem;
+}
+
+.month > i {
+  color: var(--blue-soft);
+  cursor: pointer;
+}
+
+.weekdays {
+  width: 27.2rem;
+
+  height: 1.6rem;
+
+  margin-top: 1rem;
+
+  display: flex;
+  justify-content: space-between;
+}
+
+.days {
+  width: 27.2rem;
+  height: 20rem;
+  display: flex;
+
+  margin-top: 1.6rem;
+
+  gap: 0.8rem;
+  flex-wrap: wrap;
+}
+
+.days > div {
+  width: 3.2rem;
+  height: 3.2rem;
+
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+
+  cursor: pointer;
+}
+
+.days > div:hover {
+  background-color: var(--green-medium);
+  color: var(--green-soft);
+
+  border: 0.2rem solid var(--green-light);
+  border-radius: 100%;
 }
