--- a/styles/style.css
+++ b/styles/style.css
@@ -36,7 +36,7 @@ html {
 body {
   background: var(--page-background);
   height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .sr-only {
