--- a/application/styles/index.css
+++ b/application/styles/index.css
@@ -1,11 +1,11 @@
-/* MAIN BACKGROUND CONTENT  */
+/* MAIN BACKGROUND CONTENT */
 .content {
   margin: auto 14.2rem;
 }
 
 .main {
   background-color: var(--card-background);
-  height: 100vh;
+  height: 100%;
   width: 802px;
 }
 
@@ -26,8 +26,16 @@ header > h1 {
   padding-left: 8.8rem;
 }
 
-header > h1 > strong {
+header > h1:hover {
+  color: var(--green-soft);
+}
+
+.logo {
   color: var(--blue-soft);
+}
+
+.logo:hover {
+  color: var(--gray);
 }
 
 header > nav {
@@ -104,7 +112,7 @@ main > h1 {
 
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 
   font-size: 2.2rem;
 }
@@ -112,6 +120,19 @@ main > h1 {
 .month > i {
   color: var(--blue-soft);
   cursor: pointer;
+
+  position: absolute;
+}
+
+.month > i.prev {
+  top: 40rem;
+  left: 27.5rem;
+}
+
+.month > i.next {
+  /* background-color: white; */
+  top: 40rem;
+  right: 55rem;
 }
 
 .weekdays {
@@ -122,17 +143,37 @@ main > h1 {
   margin-top: 1rem;
 
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+}
+
+.weekdays > div {
+  display: flex;
+
+  margin-right: 1.3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.weekdays div:last-child {
+  padding-left: 0.7rem;
+}
+
+.weekdays div:nth-child(5) {
+  padding-right: 0.3rem;
 }
 
 .days {
-  width: 27.2rem;
+  /* background-color: white; */
+  width: 40rem;
   height: 20rem;
+
   display: flex;
 
   margin-top: 1.6rem;
+  padding-left: 6rem;
+  padding-right: 1rem;
 
-  gap: 0.8rem;
+  gap: 0.55rem;
   flex-wrap: wrap;
 }
 
@@ -141,6 +182,7 @@ main > h1 {
   height: 3.2rem;
 
   display: flex;
+  margin-right: 0.5rem;
 
   align-items: center;
   justify-content: center;
@@ -154,4 +196,9 @@ main > h1 {
 
   border: 0.2rem solid var(--green-light);
   border-radius: 100%;
+}
+
+.prev-date,
+.next-date {
+  opacity: 0.5;
 }
