--- a/application/styles/index.css
+++ b/application/styles/index.css
@@ -7,6 +7,8 @@
   background-color: var(--card-background);
   height: 100%;
   width: 802px;
+
+  border-radius: 8px;
 }
 
 /* HEADER */
@@ -219,7 +221,7 @@ main > h1 {
 .cards > div {
   height: 100%;
   border-radius: 10px;
-  background-color: black;
+  background-color: var(--black);
 
   color: var(--white-letter);
   font: 400 1.6rem var(--body-font);
@@ -256,3 +258,56 @@ main > h1 {
 }
 
 /* TIMES SECTION */
+.timetable {
+  width: 75.4rem;
+  height: 7.2rem;
+
+  margin-top: 1.8rem;
+
+  display: flex;
+
+  color: var(--white-letter);
+  font: 400 1.6rem var(--body-font);
+}
+
+.timetable > div {
+  height: 100%;
+  border-radius: 8px;
+}
+
+.text {
+  width: 30.3rem;
+
+  font-size: 2.4rem;
+  font-weight: 700;
+}
+
+.text span {
+  color: var(--gray);
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+div.timetable-card {
+  width: 20.6rem;
+  height: 6.4rem;
+  background-color: var(--black);
+
+  margin-left: 0.8rem;
+  padding-left: 1.4rem;
+  padding-right: 1.8rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.timetable .config {
+  height: 6.4rem;
+  width: 22.9rem;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  margin-left: 0.8rem;
+  background-color: var(--black);
+}
